# shinelink

./: .gitignore  Cargo.toml  HARDWARE.md  README.md
172/: 2025-07-17T21_18_16.50185.pkt  2025-07-17T21_19_14.42739.pkt  2025-07-17T21_28_15.42421.pkt  2025-07-17T21_29_09.42578.pkt  2025-07-17T21_33_30.19900.pkt  2025-07-17T21_34_07.37302.pkt  2025-07-17T21_38_15.12811.pkt  2025-07-17T21_39_04.34182.pkt  2025-07-17T21_43_26.13108.pkt  2025-07-17T21_44_02.43349.pkt  2025-07-17T21_48_15.61012.pkt  2025-07-17T21_48_58.53487.pkt  2025-07-17T21_53_14.42560.pkt  2025-07-17T21_53_56.49460.pkt  2025-07-17T21_58_14.24390.pkt  2025-07-17T21_58_54.50074.pkt  2025-07-17T22_03_14.21734.pkt  2025-07-17T22_03_51.42491.pkt  2025-07-17T22_08_14.42466.pkt  2025-07-17T22_08_49.20521.pkt  2025-07-17T22_13_28.43239.pkt  2025-07-17T22_13_46.42514.pkt  2025-07-17T22_18_43.42819.pkt  2025-07-17T22_23_14.42436.pkt  2025-07-17T22_23_41.42294.pkt  2025-07-17T22_28_13.12603.pkt  2025-07-17T22_28_38.11585.pkt  2025-07-17T22_33_13.42517.pkt  2025-07-17T22_33_36.42498.pkt  2025-07-17T22_38_20.12966.pkt  2025-07-17T22_38_34.42397.pkt  2025-07-17T22_43_19.17023.pkt  2025-07-17T22_43_41.12936.pkt  2025-07-18T14_47_32.25834.pkt  2025-07-18T14_48_31.12967.pkt  2025-07-18T14_52_29.52291.pkt  2025-07-18T14_57_27.19694.pkt  2025-07-18T14_58_31.12912.pkt  2025-07-18T15_02_24.20382.pkt  2025-07-18T15_07_22.20131.pkt  (+57 more)
one-chat/: README.md  inbound.sr3200000.fc32  one-chat-spi.txt  one-chat-uart.txt  one-chat.pvs  one-chat.sr  outbound.sr3200000.fc32
src/: bulk.rs  crc.rs  decode.rs  demod_fm.rs  lib.rs  (+1 more)
