[package]
name = "shinelink"
version = "0.1.0"
edition = "2024"

[dependencies]
rtlsdr-rs = { git="https://github.com/ccostes/rtl-sdr-rs", branch = "main" }

anyhow = "1"
crc = "3"
ctrlc = "3"
facet = "0.27"
facet-args = "0.19"
hex = "0.4.3"
itertools = "0.14"
log = "0.4"
memchr = "2"
num-complex = "0.4"
rayon = "1"
rustfft = "6"
stderrlog = "0.6"
